[package]
name = "egui_code_editor"
authors = ["Roman Chumak <p4ymak@yandex.ru>"]
version = "0.2.14"
edition = "2021"
license = "MIT"
repository = "https://github.com/p4ymak/egui_code_editor"
description = "egui Code Editor widget with numbered lines and syntax highlighting.."
readme = "README.md"
categories = ["gui", "text-editors"]
keywords = ["egui", "GUI", "editor", "syntax", "highlighting"]

[dependencies]
egui = { version = "0.32", optional = true }
serde = { version = "1", optional = true}

[lib]
name = "egui_code_editor"
doctest = false

[features]
default = ["egui", "editor"]
egui = ["dep:egui"]
editor = []
serde = ["dep:serde"]

[[example]]
name = "demo"
test = true

[[example]]
name = "tui"
test = true

[dev-dependencies]
eframe = "0.32"
colorful = "0.3"
